fix: allows project details to overflow

--- a/src/features/projectsV2/ProjectDetails/ProjectDetails.module.scss
+++ b/src/features/projectsV2/ProjectDetails/ProjectDetails.module.scss
@@ -2,7 +2,8 @@
 
 .projectDetailsContainer {
   width: 100%;
-  height: 100%;
+  height: calc(100% + 30px);
+  padding-bottom: 30px;
   overflow-y: auto;
   overflow-x: hidden;
   padding-right: 10px;
